fixed small spacing issue with image on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -227,7 +227,7 @@ footer {
 }
 .home .space-images img {
   width: 28%;
-  margin: 20px 2.5%;
+  margin: 20px 1.5%;
   border-radius: 20px;
   height: 100%;
 }
@@ -291,7 +291,7 @@ footer {
   .home .walk .walk-text .btn {
     width: 95%;
     font-size: 1.5rem;
-    height: 30%;
+    height: 50%;
   }
 }
 .home .walk .walk-text .btn:hover {
