--- a/less/home-page.less
+++ b/less/home-page.less
@@ -41,7 +41,7 @@
 
     img {
       width        : 28%;
-      margin       : 20px 2.5%;
+      margin       : 20px 1.5%;
       border-radius: 20px;
       height       : 100%;
 
@@ -101,6 +101,7 @@
           background-color: white;
           color           : @btn-bg-color;
         }
+
 
       }
     }
