--- a/less/mixins.less
+++ b/less/mixins.less
@@ -22,8 +22,10 @@
     color           : @textcolor;
 
     @media @mobile {
+
         width    : 95%;
         font-size: 1.5rem;
-        height   : 30%;
+        height   : 50%;
+
     }
 }
